--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name:'jjwt-impl', version: '0.11.5'
     implementation group: 'io.jsonwebtoken', name:'jjwt-jackson', version: '0.11.5'
+
+    // Redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation "redis.clients:jedis:5.1.0"
 }
 
 tasks.named('test') {
